--- a/app/src/main/res/layout/bottom_sheet_layout_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_list.xml
@@ -36,7 +36,7 @@
     <EditText
         android:id="@+id/et_list_name"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:fontFamily="casual"
         android:gravity="center"
@@ -50,13 +50,13 @@
     <Button
         android:id="@+id/add_list"
         android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="casual"
         android:gravity="center"
+        android:onClick="add_list"
         android:text="Add List"
-        android:textColor="#000000"
-        android:onClick="add_list"/>
+        android:textColor="#000000" />
 
 </LinearLayout>
