--- a/app/src/main/res/layout/activity_show_task_map.xml
+++ b/app/src/main/res/layout/activity_show_task_map.xml
@@ -54,8 +54,7 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView_task"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="100"
+        android:layout_height="500dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Space
@@ -63,16 +62,36 @@
         android:layout_height="wrap_content"
         android:layout_weight="10" />
 
-    <TextView
-        android:id="@+id/tv_task_complete_address"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/annie_use_your_telescope"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="Complete Address"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_task_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:fontFamily="@font/annie_use_your_telescope"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="City"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_task_country"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:fontFamily="@font/annie_use_your_telescope"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="Country"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
