--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -233,7 +233,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar_settings"
-        style="?android:attr/progressBarStyle"
+        style="@android:style/Widget.DeviceDefault.ProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible" />
