--- a/app/src/main/res/layout/activity_show_task_map.xml
+++ b/app/src/main/res/layout/activity_show_task_map.xml
@@ -54,7 +54,7 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView_task"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Space
@@ -65,29 +65,57 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_task_city"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_task_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="50"
+                android:fontFamily="@font/annie_use_your_telescope"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="City"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <ProgressBar
+                android:id="@+id/progressBar_showMap"
+                style="@android:style/Widget.DeviceDefault.ProgressBar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tv_task_country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="50"
+                android:fontFamily="@font/annie_use_your_telescope"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="Country"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_distance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/annie_use_your_telescope"
             android:gravity="center"
             android:singleLine="true"
-            android:text="City"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_task_country"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:fontFamily="@font/annie_use_your_telescope"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="Country"
+            android:text="The distance between the task and your current location"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
