--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -57,6 +57,31 @@
         android:layout_height="wrap_content"
         android:layout_weight="50" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:onClick="stop"
+            android:text="Stop" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:onClick="start"
+            android:text="Start" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="50" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -114,9 +139,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
+                android:onClick="notification"
                 android:src="@drawable/ic_add"
                 app:backgroundTint="@color/black"
-                android:onClick="notification"
                 app:layout_anchor="@id/bottomAppBar"
                 tools:ignore="SpeakableTextPresentCheck" />
 
