--- a/app/src/main/res/layout/bottom_sheet_layout_task.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_task.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/bottom_sheet_style"
     android:padding="30dp">
 
     <ImageView
