--- a/app/src/main/res/layout/bottom_sheet_layout_tasks_day.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_tasks_day.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="30dp">
+    android:padding="30dp"
+    android:background="@drawable/bottom_sheet_style">
 
     <ImageView
         android:id="@+id/iv_TasksDay_layout"
